@@ -35,7 +35,8 @@ char *argv[];
  int status=0;
  int op2FLAG=0,sectionFLAG=0;
  unsigned long ii,jj;
- unsigned long naxes1[2], naxes2[2], section[4];
+ long naxes1[2], naxes2[2];
+ unsigned long section[4];
  double **ppix1=NULL, **ppix2=NULL, **presult=NULL;
  double op2nb;
  char op1[MAXLENGTH], op2[MAXLENGTH], result[MAXLENGTH];
