@@ -1,2 +1,3 @@
 - getkeyval won't work with a list. problem might be in read_key.
 - Write documentation
+- shared libraries?
