@@ -41,7 +41,7 @@
 #define BIGNUMBER 1E30
 
 int div2Images(double **ppix1, double **ppix2, double **presult,
-	unsigned long naxes[], unsigned long section[], long dx, long dy)
+	long naxes[], unsigned long section[], long dx, long dy)
 {
  unsigned long ii, jj, kk, ll;
  
